refac updt funcs
